[package]
name = "tsf"
version = "0.2.0"
description = "Safe interface for TinySoundFont, a software synthesizer for SoundFont2 files"
categories = ["api-bindings", "multimedia::audio"]
keywords = ["TinySoundFont", "midi", "SoundFont2", "sf2", "audio"]
authors = ["Chris Coomber <chris.w.p.coomber@gmail.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/chriscoomber/tsf-rs"
edition = "2018"
include = ["/src/**/*", "/test_resources/**/*", "/Cargo.toml", "/README.md"]

[dependencies.tsf-sys]
version = "0.2.0"
path = "tsf-sys"

[workspace]
members = ["tsf-sys"]
