[package]
name = "tsf-sys"
version = "0.2.0"
description = "Unsafe bindings for TinySoundFont, a software synthesizer for SoundFont2 files"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["TinySoundFont", "midi", "SoundFont2", "sf2", "audio"]
authors = ["Chris Coomber <chris.w.p.coomber@gmail.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/chriscoomber/tsf-rs"
edition = "2018"
include = ["/src/**/*", "/test_resources/**/*", "/Cargo.toml", "/README.md", "/build.rs", "/wrapper.h", "/tsf_src/**/*"]
links = "tsf"

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.69"